--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,194 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Poppins", sans-serif;
+  height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+}
+
+.dndflow {
+  flex-direction: column;
+  display: flex;
+  flex-grow: 1;
+  height: 700px;
+}
+
+.dndflow aside {
+  border-right: 1px solid #eee;
+  padding: 15px 10px;
+  font-size: 12px;
+  background: #fcfcfc;
+}
+
+.dndflow aside .description {
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.dndflow .dndnode {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: grab;
+  margin: 0 auto 25px;
+}
+
+.dndflow .dndnode.input {
+  border-color: #0041d0;
+}
+
+.dndflow .dndnode.output {
+  border-color: #ff0072;
+}
+
+.dndflow .reactflow-wrapper {
+  flex-grow: 1;
+  height: 100%;
+}
+
+.dndflow .selectall {
+  margin-top: 10px;
+}
+
+.react-flow__node {
+  font-size: inherit !important;
+  width: 24px !important;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0 !important;
+  box-shadow: none;
+}
+
+.react-flow__node img {
+  width: 12px;
+  height: 12px;
+  object-fit: contain;
+}
+
+.react-flow__node .react-flow__handle {
+  background: transparent !important;
+  border: none !important;
+}
+
+.react-flow__node .label-wrapper {
+  width: 100%;
+  position: absolute;
+  bottom: -10px;
+  left: calc(50% - 12px);
+  font-size: 6px !important;
+}
+
+/* Modal */
+
+.confirm {
+  width: 360px;
+  background: #fff;
+  transition: 0.6s;
+  z-index: 100;
+  position: absolute;
+  top: -520px;
+  left: calc(50% - 180px);
+}
+
+.confirm.show {
+  top: calc(50% - 260px);
+}
+
+.confirm-content {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1rem;
+}
+
+.confirm-content h4 {
+  font-weight: 800;
+  position: relative;
+  margin: 0 0 20px 0;
+}
+
+.confirm-content h4::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background: #4070f4;
+  position: absolute;
+  bottom: -7px;
+  left: 0;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  margin: 0px 0 10px 0;
+  border: none;
+  background: #f7f7f7;
+}
+
+input[type="file"] {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0 20px 0;
+}
+
+input[type="text"]:focus,
+select:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+.confirm-btns {
+  height: 20%;
+}
+
+.confirm-btns button {
+  width: 50%;
+  height: 100%;
+  background: #4070f4;
+  font-weight: 600;
+  color: #fff;
+  padding: 15px 0;
+  cursor: pointer;
+}
+
+.confirm-btns button:hover {
+  background: #3665eb;
+}
+
+.overlay {
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+}
+
+.confirm.show + .overlay {
+  display: block;
+}
+
+.button {
+  background: #4070f4;
+  color: #fff;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .dndflow {
+    flex-direction: row;
+  }
+
+  .dndflow aside {
+    width: 10%;
+    max-width: 100px;
+  }
 }
